
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".SingUp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="56dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@android:color/transparent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/descricao_imagem_fundo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/Cadastro"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textSize="16sp"
                android:hint="@string/Nome"
                />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textSize="16sp"
                android:hint="@string/Email" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/Senha" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text"
                android:layout_height="48dp"
                android:textSize="16sp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/Confirmar" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/shape_button"
                android:text="@string/Cadastrar"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:id="@+id/have_an_account"
                android:text="@string/Voltar_Login"
                android:textColor="@color/white02"
                android:textSize="16sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>