<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:text="@string/data_de_fim"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="297dp"
        android:background="@color/white02"/>

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white02"
        android:ems="10"
        android:inputType="date"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="297dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="345dp"
        android:layout_height="144dp"
        android:background="@color/white02"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/descri_o_do_projeto"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="434dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/seu_nick"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:background="@color/white02"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/crie_seu_projeto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white02"/>

    <Button
        android:id="@+id/button_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:text="@string/criar_projeto"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="650dp"
        style="?android:attr/borderlessButtonStyle"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nome_do_projeto"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="138dp"
        android:background="@color/white02"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white02"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="248dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:background="@color/white02"
        android:text="@string/data_de_inicio"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="248dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white02"
        android:text="@string/numero_de_membros"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="393dp" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_width="137dp"
        android:layout_height="22dp"
        android:background="@color/white02"
        android:completionThreshold="8"
        android:text="@string/tags_do_projeto"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="597dp" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_width="106dp"
        android:layout_height="27dp"
        android:background="@color/white02"
        android:text="@string/_1"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="385dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/fotoproject"
        android:layout_width="99dp"
        android:layout_height="69dp"
        app:srcCompat="@android:drawable/ic_menu_report_image"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="47dp"
        android:background="@color/white02"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>