<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="56dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:elevation="8dp">


        <LinearLayout
            android:layout_width="294dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/descricao_imagem_fundo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />


            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email_login"
                style="@style/edit_text"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/Email"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email_password"
                style="@style/edit_text"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/Senha"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                android:layout_margin="32dp"
                android:background="@drawable/shape_button"
                android:text="@string/Entrar"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/forgot_password"
                android:text="@string/EsqueciSe"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:id="@+id/button_cadastr"
                android:text="@string/Cadastrar."
                android:textColor="@color/white"
                android:textSize="16sp" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>